--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         let engine = Matter.Engine.create();
         let render = Matter.Render.create({
             element: document.body,
-            engine: engine
+            engine: engine,
+            options: {
+                width: 1600,
+                height: 800,
+                wireframes: false
+            }
         });
 
 
@@ -38,14 +43,15 @@
 
         render.mouse = mouse;
 
-        Matter.World.add(engine.world, [boxA, boxB, ground, mouseConstraint]);
+        let stack = Matter.Composites.stack(200, 200, 4, 4, 0, 0, (x, y) => {
+            // return Matter.Bodies.rectangle(x, y, 80, 80);
+            const sides = Math.ceil(Math.random()*7 + 1);
+            return Matter.Bodies.polygon(x, y, sides, 80);
+        })
+
+        Matter.World.add(engine.world, [boxA, boxB, ground, stack, mouseConstraint]);
         Matter.Runner.run(engine);
         Matter.Render.run(render);
-        
-        let crash = Matter.Collision.collides(boxA, boxB);
-        if (crash) {
-            console.log("crash detected!");
-        }
 
     </script>
 
